# MidasMiner

./: .gitattributes  .gitignore  Animations.cpp  Animations.h  CMakeLists.txt  CMakePresets.json  Grid.h  MidasMiner.cpp  MidasMiner.sln  MidasMiner.vcxproj  MidasMiner.vcxproj.filters  Objects.cpp  Objects.h  all.sh  build.bat  build.sh
src/: CMakeLists.txt  Grid.cpp  MidasMiner.cpp  Objects.cpp  Objects.h
